<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C6E2FF"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="rebamit.basic.activity.AddOutfitActivity">



    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="262dp"
                android:layout_height="108dp"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="50dp"
                android:src="@drawable/basiclogo" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/imageView_pic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:adjustViewBounds="true"
                    android:visibility="visible" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="257dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="1">

                <Button
                    android:id="@+id/pic_button"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:layout_gravity="center_horizontal"
                    android:background="#fff"
                    android:singleLine="true"
                    android:text="@string/pic_button" />

                <EditText
                    android:id="@+id/new_tags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="0.04"
                    android:background="#fff"
                    android:hint="@string/new_tags"
                    android:padding="10dp"
                    android:singleLine="true" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:layout_weight="0.04"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/save_outfit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="30dp"
                        android:layout_marginRight="30dp"
                        android:background="#fff"
                        android:singleLine="true"
                        android:text="@string/save" />

                    <Button
                        android:id="@+id/cancel_outfit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginLeft="30dp"
                        android:background="#fff"
                        android:singleLine="true"
                        android:text="@string/cancel" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>


