<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C6E2FF"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="1"
        tools:context="rebamit.basic.activity.SearchOutfitActivity">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="262dp"
            android:layout_height="108dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/basiclogo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:weightSum="1"
            android:layout_weight="0.68">

            <RadioGroup
                android:id="@+id/radio_type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="120dp"
                    android:checked="true"
                    android:focusable="true"
                    android:focusableInTouchMode="false"
                    android:text="@string/hint_search_tag" />

                <RadioButton
                    android:id="@+id/radio_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="false"
                    android:text="@string/hint_search_date" />
            </RadioGroup>

            <EditText
                android:id="@+id/new_field1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_weight="0.04"
                android:background="#fff"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:singleLine="true" />

            <EditText
                android:id="@+id/new_field2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.04"
                android:background="#fff"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_weight="0.04"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/search_outfit_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:singleLine="true"
                    android:text="@string/search_outfit_button" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <ListView
        android:id="@+id/navList_search"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:background="#fff" />
</android.support.v4.widget.DrawerLayout>